sgx/third_party/crates-io/vendor/rocket_codegen/tests/ui-fail/from_form_type_errors.stderr
error[E0277]: the trait bound `Unknown: rocket::request::FromFormValue<'_>` is not satisfied
 --> $DIR/from_form_type_errors.rs:7:5
  |
7 |     field: Unknown,
  |     ^^^^^^^^^^^^^^ the trait `rocket::request::FromFormValue<'_>` is not implemented for `Unknown`

error[E0277]: the trait bound `Foo<usize>: rocket::request::FromFormValue<'_>` is not satisfied
  --> $DIR/from_form_type_errors.rs:15:5
   |
15 |     field: Foo<usize>,
   |     ^^^^^^^^^^^^^^^^^ the trait `rocket::request::FromFormValue<'_>` is not implemented for `Foo<usize>`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
